// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="chzi9jt soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="ccwdh3p soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="c7c3lj3 soui-switch-content"
  >
    <div
      class="cvn3y3u soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="chzi9jt soui-switch-wrapper cpgj2xa soui-switch-wrapper-checked c-d1iv0r soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="c-2tzeym soui-switch-loading"
      />
    </div>
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="chzi9jt soui-switch-wrapper c-d1iv0r soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="c-2tzeym soui-switch-loading"
      />
    </div>
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="chzi9jt soui-switch-wrapper c6xbfla soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="chzi9jt soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="chzi9jt soui-switch-wrapper c6t9k2q soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="chzi9jt soui-switch-wrapper cpgj2xa soui-switch-wrapper-checked c-d1iv0r soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="chzi9jt soui-switch-wrapper c-d1iv0r soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="ccwdh3p soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c7c3lj3 soui-switch-content"
    >
      <div
        class="cvn3y3u soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
